# wisp

./: README.md  package.json  pnpm-lock.yaml  stdio.txt  vite.config.ts
docs/: tool-registry-design.md
docs/superpowers/plans/: 2026-06-30-rust-conversation-engine-migration.md
src/: App.vue
src-tauri/: Cargo.toml
src-tauri/src/: api.rs  commands.rs  lib.rs  types.rs
src-tauri/src/configs/: character.rs  mod.rs  model.rs  provider.rs
src-tauri/src/conversation/: commands.rs  engine.rs  mod.rs  payload.rs  tool_executor.rs  tool_parser.rs  types.rs
src-tauri/src/db/: chat.rs  messages.rs  mod.rs  types.rs
src-tauri/src/image/: commands.rs
src-tauri/src/mcp/: commands.rs  mod.rs  types.rs
src-tauri/src/mcp_http/: client.rs  commands.rs  manager.rs  mod.rs
src-tauri/src/mcp_stdio/: client.rs  commands.rs  manager.rs  mod.rs
src-tauri/src/tool_registry/: mod.rs  registry.rs  types.rs
src/components/: CharacterForm.vue  Chat.vue  ConversationList.vue  ImageInput.vue  McpConversationConfig.vue  McpPipelineConfig.vue  McpServerConfig.vue  McpServerDetails.vue  McpServerList.vue  MessageBubble.vue  ProviderList.vue
src/composables/: useConversationEvents.ts  useMcpConnection.ts  useOpenAI.ts
src/engine/: conversation-loop.ts  index.ts  session-manager.ts  types.ts
src/libs/: commands.ts  types.ts
src/pipeline/: detector.ts  index.ts  transformer.ts  types.ts  vision-router.ts
src/registry/: index.ts  schema-normalizer.ts  tool-registry.ts  types.ts
src/router/: index.ts
src/stores/: character.ts  chat.ts  mcp.ts
src/transports/: connection-manager.ts  http-transport.ts  index.ts  sse-transport.ts  stdio-transport.ts  types.ts
src/utils/: error.ts
src/views/: McpView.vue  PalsView.vue
(+6 files in other folders)
