[package]
name = "wisp"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "wisp_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.35.0", features = ["bundled"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.28.0"
tauri-plugin-clipboard-manager = "2"
thiserror = "2.0.12"
uuid = "1.16.0"
async-openai = { git = "https://github.com/Anson2251/async-openai.git", version = "0.28.2" }
window-vibrancy = "0.6.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
keyring = { version = "3.6.2", features = [
    "apple-native",
    "windows-native",
    "linux-native-async-persistent",
    "crypto-rust",
    "tokio",
] }
specta = "=2.0.0-rc.22"
specta-typescript = "0.0.9"
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
hashlink = "0.10.0"
toml = "0.8.23"
image = "0.25"
base64 = "0.22"
anyhow = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
